# baxter_mill

./: .gitignore  CMakeLists.txt  README.md  package.xml  setup.py
config/: .git_no_ignore  left_positions.config  right_positions.config
scripts/: calibrate.py  start_game.py
src/baxter_mill/: __init__.py  baxter_controller.py
srv/: baxter_command.srv
